<resources>
    <string name="app_name">Popular-Movies</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="network_error_message">
        No internet connection found. Please check your connection
    </string>
    <string name="rating">Rating:</string>
    <string name="_10">/10</string>
    <string name="release_date">Release Date:</string>
    <string name="plot">Plot:</string>
    <string name="imageview">ImageView</string>
</resources>
